--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
 <div class=".mkqr">
     <img src="zzzz.webp">
 </div>
+<div class='download-section'>
+    <img src="kjuj.png"  class="logo">
+<br>
+<a href="https://drive.google.com/file/d/1AlmWseZQhNMnDUeMWS6wCz-x79jPj06O/view" class='download-btn'>скачать</a>
+</div>
  </main>   
 <footer>
     <p>свяжитесь с нами: <a href="mailoto:perek02akadem@gmail/com">тыкай сюда</a></p>
